src/objects/Rating__c.object
<CustomObject>
    <fields>
        <fullName>CO_Feed_Closed__c</fullName>
        <formula>CO_Feed__r.Rating_Started__c</formula>
        <label>CO Feed Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CO_Feed__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CO Feed</label>
        <referenceTo>CO_Feed__c</referenceTo>
        <relationshipName>Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cheerful_F__c</fullName>
        <formula>CASE(Cheerful__c, 
&apos;1. Challenged&apos;, 1, 
&apos;2. Satisfactory&apos;, 2, 
&apos;3. Professional&apos;, 3, 
&apos;4. Positive&apos;, 4, 
&apos;5. Inspirational&apos;, 5, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheerful_F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheerful__c</fullName>
        <description>Are your work interactions with this person collaborative and harmonious?</description>
        <inlineHelpText>Are your work interactions with this person collaborative and harmonious?</inlineHelpText>
        <label>Cheerful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Challenged</fullName>
                </value>
                <value>
                    <fullName>2. Satisfactory</fullName>
                </value>
                <value>
                    <fullName>3. Professional</fullName>
                </value>
                <value>
                    <fullName>4. Positive</fullName>
                </value>
                <value>
                    <fullName>5. Inspirational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Ratee__r.Country</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Ratee__r.Business_Unit__c</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept__c</fullName>
        <formula>Rater__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Rater__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Emp_Number__c</fullName>
        <formula>Ratee__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Emp Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engaged__c</fullName>
        <description>How frequently have you teamed up with this person in the past quarter?</description>
        <inlineHelpText>How frequently have you teamed up with this person in the past quarter?</inlineHelpText>
        <label>Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Quarterly</fullName>
                </value>
                <value>
                    <fullName>2. Monthly</fullName>
                </value>
                <value>
                    <fullName>3. Periodically</fullName>
                </value>
                <value>
                    <fullName>4. Weekly</fullName>
                </value>
                <value>
                    <fullName>5. Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engaged_f__c</fullName>
        <formula>CASE(Engaged__c, 
&apos;1. Quarterly&apos;, 1, 
&apos;2. Monthly&apos;, 2, 
&apos;3. Periodically&apos;, 3, 
&apos;4. Weekly&apos;, 4, 
&apos;5. Daily&apos;, 5, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Engaged_F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FM_is_me__c</fullName>
        <formula>IF($User.Id =  CO_Feed__r.Functional_Manager__r.Id , true, false)</formula>
        <label>FM is me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Ratee_or_Rater__c</fullName>
        <formula>!Rater__r.IsActive || !Ratee__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Ratee or Rater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indirect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indirect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFlip_Collaborator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Flip Collaborator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_is_Ratee__c</fullName>
        <formula>Ratee__c = CO_Feed__r.Functional_Manager__c || Ratee__c = CO_Feed__r.Other__c || Ratee__c = Rater__r.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager is Ratee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merit_BU__c</fullName>
        <formula>Rater__r.Business_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merit BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_is_Rater__c</fullName>
        <formula>IF( Rater__c = OwnerId , true, false)</formula>
        <label>Owner is Rater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreciseAgileandTransparent_F__c</fullName>
        <formula>CASE(PreciseAgileandTransparent__c, 
&apos;1. Struggles&apos;, 1, 
&apos;2. Learning&apos;, 2, 
&apos;3. Competent&apos;, 3, 
&apos;4. Master&apos;, 4, 
&apos;5. Brilliant&apos;, 5, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PreciseAgileandTransparent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreciseAgileandTransparent__c</fullName>
        <description>Does this person demonstrate thoughtfulness, excellence, and empowerment through work interactions?</description>
        <inlineHelpText>Does this person demonstrate thoughtfulness, excellence, and empowerment through work interactions?</inlineHelpText>
        <label>Precise, Agile, and Transparent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Struggles</fullName>
                </value>
                <value>
                    <fullName>2. Learning</fullName>
                </value>
                <value>
                    <fullName>3. Competent</fullName>
                </value>
                <value>
                    <fullName>4. Master</fullName>
                </value>
                <value>
                    <fullName>5. Brilliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryKey__c</fullName>
        <externalId>true</externalId>
        <label>PrimaryKey</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_F__c</fullName>
        <formula>TEXT(CO_Feed__r.Quarter__c)</formula>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratee_Full_Name__c</fullName>
        <formula>Ratee__r.Full_Name__c</formula>
        <label>Ratee Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratee_Manager_is_Me__c</fullName>
        <formula>Ratee__r.ManagerId = Rater__c</formula>
        <label>Ratee Manager is Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ratee_Prior_Value__c</fullName>
        <description>Prior value - populated on update</description>
        <inlineHelpText>Prior value - populated on update</inlineHelpText>
        <label>Ratee Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratee_Title__c</fullName>
        <formula>Rater__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratee Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ratee</description>
        <inlineHelpText>Ratee</inlineHelpText>
        <label>Ratee</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
            <errorMessage>Only an active MicroStrategy employee can be selected as Collaborator.</errorMessage>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Worker_Type__c</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>User.EmployeeNumber</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>User.EmployeeNumber</field>
                <operation>notContain</operation>
                <value>-</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ratee_is_Me__c</fullName>
        <formula>IF( Ratee__c = $User.Id , true, false)</formula>
        <label>Ratee is Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rater_Emp_Number__c</fullName>
        <formula>Rater__r.EmployeeNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rater Emp Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rater__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rater/Employee</description>
        <inlineHelpText>Rater/Employee</inlineHelpText>
        <label>Rater</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Raters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondaryKey__c</fullName>
        <externalId>true</externalId>
        <label>SecondaryKey</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_F__c</fullName>
        <formula>CASE(Status__c, 
&apos;Not Started&apos;, 0, 
&apos;Completed&apos;, 1, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status F</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <description>Team Role</description>
        <inlineHelpText>Team Role</inlineHelpText>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collaborator</fullName>
                </value>
                <value>
                    <fullName>Other Collaborator</fullName>
                </value>
                <value>
                    <fullName>Functional Manager</fullName>
                </value>
                <value>
                    <fullName>Matrix Manager</fullName>
                </value>
                <value>
                    <fullName>Direct Report</fullName>
                </value>
                <value>
                    <fullName>Indirect Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Ratee__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This becomes TRUE,  only when the Collab record is created or Edited through the &quot;Rating Related&quot; Lightning Component but not through Batch Class. So that we can Post Chatter to Manager on Record Edits.</description>
        <label>UI Modified</label>
        <type>Checkbox</type>
    </fields>
    <label>Collaborator</label>
    <listViews>
        <fullName>My_Inbox</fullName>
        <columns>Ratee__c</columns>
        <columns>Team_Role__c</columns>
        <columns>Engaged__c</columns>
        <columns>PreciseAgileandTransparent__c</columns>
        <columns>Cheerful__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Rating__c.Rating</value>
        </filters>
        <filters>
            <field>Quarter_F__c</field>
            <operation>equals</operation>
            <value>Q42021</value>
        </filters>
        <label>My Inbox</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Rating Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborators</pluralLabel>
    <recordTypes>
        <fullName>Collaboration</fullName>
        <active>true</active>
        <label>Collaboration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rating</fullName>
        <active>true</active>
        <label>Rating</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Create_Collaborators_only_during_add_col</fullName>
        <active>true</active>
        <description>Collaborators can be created only during collaboration time period not during rating</description>
        <errorConditionFormula>AND(
 ISNEW(),
 CO_Feed__r.Rating_Started__c = true,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorMessage>New Collaborators can not be added during Rating Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Direct_Manager_cannot_be_added_as_Collab</fullName>
        <active>true</active>
        <description>Direct Manager cannot be added as Collaborator</description>
        <errorConditionFormula>AND( CO_Feed__r.Functional_Manager__c!=null,
Indirect__c= false,
CO_Feed__r.Functional_Manager__c =  Ratee__c, NOT(ISPICKVAL(Team_Role__c, &apos;Functional Manager&apos;)))</errorConditionFormula>
        <errorMessage>Direct Manager cannot be added as Collaborator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>General_Manager_cannot_be_Direct</fullName>
        <active>false</active>
        <description>General_Manager_cannot_be_Direct_Collaborator</description>
        <errorConditionFormula>AND(CO_Feed__r.General_Manager__r.Id != null,
Indirect__c= false,
 CO_Feed__r.General_Manager__r.Id =  Ratee__r.Id, NOT(ISPICKVAL(Team_Role__c, &apos;General Manager&apos;)))</errorConditionFormula>
        <errorMessage>General Manager cannot be Direct Collaborator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Matrix_Manager_cannot_be_Direct_Collab</fullName>
        <active>true</active>
        <description>Matrix Manager cannot be Direct Collaborator</description>
        <errorConditionFormula>AND( CO_Feed__r.Other__r.Id != null, CO_Feed__r.Other__r.Id =  Ratee__r.Id,

Indirect__c= false,
 NOT(ISPICKVAL(Team_Role__c, &apos;Dual Line&apos;))


)</errorConditionFormula>
        <errorMessage>Matrix Manager cannot be Direct Collaborator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Raters_Direct_Managers_or_HR_can_e</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Rater__c != $User.Id, 
CO_Feed__r.Functional_Manager__r.Id != $User.Id, 
$Profile.Name != &apos;System Administrator&apos;, 
$Profile.Name != &apos;System Operator&apos;, 
NOT($Permission.MR_Modify_Co_feed),
OR(ISCHANGED(Ratee__c), ISCHANGED(Cheerful__c), ISCHANGED(Engaged__c), ISCHANGED(PreciseAgileandTransparent__c), ISCHANGED(OwnerId), ISCHANGED(RecordTypeId), AND(ISCHANGED( IsFlip_Collaborator__c), Ratee__c != $User.Id, Ratee__r.ManagerId != $User.Id))
)</errorConditionFormula>
        <errorMessage>Only Raters, Direct Managers or HR can edit Collaborators</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED( OwnerId ), 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;System Operator&quot;

)</errorConditionFormula>
        <errorMessage>Owner cannot be changed for collaborator record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ratee_Field_cannot_be_empty</fullName>
        <active>true</active>
        <description>Ratee Field cannot be empty</description>
        <errorConditionFormula>ISBLANK(Ratee__c)</errorConditionFormula>
        <errorMessage>Ratee field cannot be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rater_Ratee_cant_be_changed</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 RecordType.Name =&quot;Collaboration&quot;,
 ISCHANGED( Rater__c ) 
 )</errorConditionFormula>
        <errorMessage>Rater Cant be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rater_and_Ratee_cant_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 RecordType.Name = &quot;Rating&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
OR(
 ISCHANGED( Rater__c), 
 ISCHANGED(  Ratee__c  ),
 ISCHANGED(   Team_Role__c   ),
ISCHANGED( CO_Feed__c )
 )
)</errorConditionFormula>
        <errorMessage>Rater, Ratee, Team Role and Co Feed cant be changed during Rating Period</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rater_must_be_Employee_from_ParentCoFeed</fullName>
        <active>true</active>
        <errorConditionFormula>CO_Feed__r.Employee__c !=  Rater__c</errorConditionFormula>
        <errorMessage>Rater must be same as the Employee on CO Feed</errorMessage>
    </validationRules>
</CustomObject>